--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,5 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-iced = "0.12.1"
-tokio = "1.37.0"
+iced = { version = "0.12.1", features = ["svg"] }
+tokio = "1.38.0"
